# stanc3

./: .gitignore  Makefile  Torsten-Stanc3.patch  dune  dune-project  enumerated.txt  foo.stan  mutaml.sh  stanc.opam
.github/workflows/: binaries.yml  esperanto.yml
src/analysis_and_optimization/: Mir_utils.ml  dune
src/common/: Validation.ml  Validation.mli  dune
src/common/io/: Reader.mli  dune
src/common/io/caml/: Reader.ml  dune
src/common/io/json/: Reader.ml  dune
src/driver/: Entry.ml  Entry.mli  dune
src/frontend/: Ast_to_Mir.ml  Debug_data_generation.ml  Errors.ml  Input_warnings.ml  Parse.ml  Parse.mli  Preprocessor.ml  Pretty_print_prog.ml  Pretty_printing.ml  Semantic_check.ml  Typechecker.ml  Typechecker.mli  dune  parser.messages  parser.mly  parser_errors.lrgrep
src/middle/: Program.ml  SizedType.ml  Stan_math_signatures.ml  Torsten.ml  dune
src/stan_math_backend/: Cpp.ml  Cpp_Json.ml  Locations.ml  Locations.mli  Lower_expr.ml  Lower_functions.ml  Lower_functions.mli  Lower_program.ml  Lower_stmt.ml  Stan_math_code_gen.ml  Stan_math_code_gen.mli  Statement_gen.ml  Transform_Mir.ml  dune
src/stanc/: dune  stanc.ml
src/stancjs/: clock.js  dune  stancjs.ml
src/stanup/: dune  stanup.ml
src/tfp_backend/: Code_gen.ml
test/integration/: dune  run_bin_on_args.ml
test/integration/bad/: dune  stanc.expected
test/integration/bad/algebra_solver/: stanc.expected
test/integration/bad/complex-numbers/: stanc.expected
test/integration/bad/compound-assign/: stanc.expected
test/integration/bad/data_index/: stanc.expected
test/integration/bad/for_loops/: stanc.expected
test/integration/bad/function-signatures/: stanc.expected
test/integration/bad/function-signatures/overloading/: stanc.expected
test/integration/bad/hmm_hidden_state_prob/: stanc.expected
test/integration/bad/includes/: README  dune  else.inc  else.stan  expr.inc  expr.stan  if.inc  if.stan  inline.expected  stanc.expected
test/integration/bad/lang/: stanc.expected
test/integration/bad/map_rect/: stanc.expected
test/integration/bad/missing_dist_suffix/: stanc.expected
test/integration/bad/new/: stanc.expected
test/integration/bad/numeric-literal/: stanc.expected
test/integration/bad/ode/: stanc.expected
test/integration/bad/ode/adams/: stanc.expected
test/integration/bad/profiling/: stanc.expected
test/integration/bad/reduce_sum/: stanc.expected
test/integration/bad/removed_features/: stanc.expected
test/integration/bad/reserved/: stanc.expected
test/integration/bad/tuples/: stanc.expected
test/integration/bad/unnormalized/: stanc.expected
test/integration/bad/variadic_dae/: stanc.expected
test/integration/bad/variadic_ode/: stanc.expected
test/integration/canonicalize/: canonical.expected  canonicalize.t  deprecations-only.expected  dune  everything-but.expected
test/integration/canonicalize/include/: dune  inlined.expected  stanc.expected
test/integration/cli-args/: dune  notfound.expected  stanc.t
test/integration/cli-args/allow-undefined/: cpp.expected  dune  standalone-cpp.expected
test/integration/cli-args/canonicalize/: canonical.expected  canonicalize.t  deprecations-only.expected  dune  everything-but.expected  strip-comments.expected
test/integration/cli-args/canonicalize/include/: dune  inlined.expected  stanc.expected
test/integration/cli-args/debug-generation.t/: run.t
test/integration/cli-args/filename-in-msg/: dune  filename_error.expected  filename_good.expected
test/integration/cli-args/info/: dune  info.expected
test/integration/cli-args/max-line-length/: dune  long.expected  short.expected
test/integration/cli-args/model-name/: dune  stanc.expected
test/integration/cli-args/warn-pedantic/: dune  stanc.expected
test/integration/downstream/: dune  pretty.expected
test/integration/downstream/rstanarm/: dune  inlined.expected  pretty.expected  stripped.expected
test/integration/good/: pretty.expected
test/integration/good/array-expr/: pretty.expected
test/integration/good/code-gen/: cl.expected  cpp.expected  dune  lir.expected  mir.expected  transformed_mir.expected
test/integration/good/code-gen/complex_numbers/: complex_vectors.stan  cpp.expected
test/integration/good/code-gen/expressions/: cpp.expected  dune
test/integration/good/code-gen/ode/: cpp.expected  dune
test/integration/good/code-gen/opencl/: cpp.expected  dune
test/integration/good/code-gen/profiling/: cpp.expected  dune  transformed_mir.expected
test/integration/good/code-gen/standalone_functions/: cpp.expected  dune  stanc.expected
test/integration/good/compiler-optimizations/: cpp.expected  cppO0.expected  cppO1.expected  dune
test/integration/good/compiler-optimizations/mem_patterns/: cpp.expected  dune  transformed_mir.expected
test/integration/good/compound-assign/: pretty.expected
test/integration/good/for_loops/: pretty.expected
test/integration/good/indexing/: pretty.expected
test/integration/good/lang/: pretty.expected
test/integration/good/model/: pretty.expected
test/integration/good/ode/: pretty.expected
test/integration/good/optimization/: pretty.expected
test/integration/good/overloading/: pretty.expected
test/integration/good/parser-generator/: pretty.expected
test/integration/good/promotion/: pretty.expected
test/integration/good/runtime_errors/: pretty.expected
test/integration/good/services/: pretty.expected
test/integration/good/stat_comp_benchmarks_models/: pretty.expected
test/integration/good/tuples/: cpp.expected  dune  pretty.expected  transformed_mir.expected
test/integration/good/variational/: pretty.expected
test/integration/good/vec-expr/: pretty.expected
test/integration/good/warning/: pretty.expected
test/integration/included/: dune  stanc.expected
test/integration/max-line-length/: dune  long.expected  short.expected
test/integration/signatures/: stan_math_distributions.t  stan_math_signatures.t
test/stancjs/io/: basic-io.js  basic.stan  dune  includeme.stan  includer.stan  includes.js  stancjs.expected
test/unit/: dune
(+3 files in other folders)
