(library
 (name analysis_and_optimization)
 (public_name stanc.analysis)
 (libraries core_kernel str fmt common middle frontend stan_math_backend)
 (modules_without_implementation monotone_framework_sigs)
 (inline_tests
  (libraries caml_io))
 (preprocess
  (pps ppx_jane ppx_deriving.map ppx_deriving.fold)))
