(executable
 (name stancjs)
 (libraries core fmt js_of_ocaml driver)
 (js_of_ocaml
  (javascript_files clock.js))
 (instrumentation
  (backend landmarks --auto))
 (preprocess
  (pps landmarks-ppx ppx_jane))
 (modes js))

(env
 (release
  (js_of_ocaml
   (flags
    (:standard "--opt" "3"))))
 (dev
  (js_of_ocaml
   (flags
    "--pretty"
    "--no-inline"
    "--debug-info"
    "--disable"
    "staticeval"
    "--disable"
    "share"
    "--enable"
    "with-js-error"))))

(alias
 (name default)
 (deps stancjs.bc.js))
