(executable
 (name stancjs)
 (libraries
  js_of_ocaml
  frontend
  middle
  analysis_and_optimization
  stan_math_backend)
 (js_of_ocaml
  (javascript_files clock.js))
 (instrumentation
  (backend landmarks --auto))
 (preprocess
  (pps landmarks-ppx ppx_jane))
 (modes js))

(alias
 (name default)
 (deps stancjs.bc.js index.html))
