(rule
 (targets stanc.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan))
  (:stanfiles-no-include-path stanc_helper_with_good_include.stan))
 (action
  (with-stdout-to
   %{targets}
   (progn
    (run
     %{bin:run_bin_on_args}
     "/mnt/home/bward/ceph/mutation/stanc3/stanc.exe --include-paths=\"../included\" "
     %{stanfiles})
    (run
     %{bin:run_bin_on_args}
     "/mnt/home/bward/ceph/mutation/stanc3/stanc.exe"
     %{stanfiles-no-include-path})))))

(rule
 (alias runtest)
 (action
  (diff stanc.expected stanc.output)))
