(rule
 (targets standalone-cpp.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan*)))
 (action
  (with-stdout-to
   %{targets}
   (run
    %{bin:run_bin_on_args}
    "/mnt/home/bward/ceph/mutation/stanc3/stanc.exe --standalone-functions --allow-undefined --print-cpp"
    %{stanfiles}))))

(rule
 (alias runtest)
 (action
  (diff standalone-cpp.expected standalone-cpp.output)))

(rule
 (targets cpp.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan*)))
 (action
  (with-stdout-to
   %{targets}
   (run
    %{bin:run_bin_on_args}
    "/mnt/home/bward/ceph/mutation/stanc3/stanc.exe --allow-undefined --print-cpp"
    %{stanfiles}))))

(rule
 (alias runtest)
 (action
  (diff cpp.expected cpp.output)))
