(rule
 (targets info.output)
 (deps
  (package stanc)
  info.stan
  included.stan
  includes/recursive.stan
  includes/another_include.stan)
 (action
  (with-stdout-to
   %{targets}
   (run
    %{bin:run_bin_on_args}
    "/home/brian/Dev/ml/stanc3/stanc.exe --include-paths=.,includes --info "
    info.stan))))

(rule
 (alias runtest)
 (action
  (diff info.expected info.output)))
