(rule
 (targets stanc.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan)))
 (action
  (with-stdout-to
   %{targets}
   (run
    %{bin:run_bin_on_args}
    "/home/brian/Dev/ml/stanc3/stanc.exe --name=foo "
    %{stanfiles}))))

(rule
 (alias runtest)
 (action
  (diff stanc.expected stanc.output)))
